[package]
authors = ["66f94eae"]
name = "choliday"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
chrono-tz = "0.10.4"
clap = {version = "4.5.54", features = ["derive"] }
ical = "0.11.0"
reqwest = {version = "0.13.1", features = ["gzip"] }
serde = {version="1.0.228", features = ["derive"]}
tokio = {version="1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.11"
